fixed some bugs and added more features

--- a/ansible/roles/nginx/files/public/index.html
+++ b/ansible/roles/nginx/files/public/index.html
@@ -13,7 +13,7 @@
       <div class="top-left">
         <h1>All of the things are done.</h1>
         <p class="big-desc">
-          You're all set up for development.
+          I'm your NGINX! You're all set up for development.
         </p>
 
       </div> <!-- End of Top-Left -->
